Added abind as a dependency for sample merging function.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,5 +6,5 @@ Date: 2012-04-06
 Author: Krzysztof Sakrejda
 Maintainer: Krzysztof Sakrejda <sakrejda@cns.umass.edu>
 Description: uciekaj (run!) provides a conveinence layer over Martyn Plummer's rjags package for running BUGS models.
-Depends: rjags, yaml, optparse, reshape, coda
+Depends: rjags, yaml, optparse, reshape, coda, abind
 License: GPL-3
