--- a/package_dir/DESCRIPTION
+++ b/package_dir/DESCRIPTION
@@ -6,5 +6,5 @@ Date: 2012-04-06
 Author: Krzysztof Sakrejda
 Maintainer: Krzysztof Sakrejda <sakrejda@cns.umass.edu>
 Description: uciekaj (run!) provides a conveinence layer over Martyn Plummer's rjags package for running BUGS models.
-Depends: rjags, yaml, optparse, reshape, coda, abind, ggplot2
+Depends: yaml, optparse, abind, ggplot2
 License: GPL-3
